--- a/styles/main.css
+++ b/styles/main.css
@@ -28,3 +28,44 @@ body {
   height: 100vh;
   position: relative;
 }
+
+#showcase:before {
+  content: '';
+  background-image: url('../images/showcase.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+#showcase .showcase-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  height: 100%;
+}
+#showcase h1 {
+  font-size: 4rem;
+}
+#showcase p {
+  font-size: 1.3rem;
+}
+.btn {
+  display: inline-block;
+  border: none;
+  background: var(--primary-color);
+  color: white;
+  padding: 0.75rem 1.5rem;
+  margin-top: 1rem;
+  transition: opacity 1s ease-in-out;
+  text-decoration: none;
+}
+.btn:hover {
+  opacity: 0.7;
+}
